Some general code cleanup Also includes some refactoring to Java 17 syntax